Fixed some contrasts to make them accessible

--- a/frontend/src/components/Notification/Notification.css
+++ b/frontend/src/components/Notification/Notification.css
@@ -24,7 +24,7 @@
 }
   
 .notification button {
-    background-color: #4c78a8;
+    background-color: ##334c71;
     color: white;
     border: none;
     border-radius: 4px;
