--- a/frontend/src/views/BookingListView/BookingListView.css
+++ b/frontend/src/views/BookingListView/BookingListView.css
@@ -39,7 +39,7 @@
 }
   
 .form-control:focus {
-    border-color: #4c78a8;
+    border-color: #334c71;
     box-shadow: 0 0 0 0.2rem rgba(63, 81, 181, 0.25);
 }
   
