--- a/frontend/src/views/MovieBookingView/MovieBookingView.css
+++ b/frontend/src/views/MovieBookingView/MovieBookingView.css
@@ -56,7 +56,7 @@
 }
   
 .form-control:focus {
-    border-color: #4c78a8;
+    border-color: #334c71;
     box-shadow: 0 0 0 0.2rem rgba(63, 81, 181, 0.25);
 }
   
@@ -64,7 +64,7 @@
     display: inline-block;
     font-weight: 400;
     color: #fff;
-    background-color: #4c78a8;
+    background-color: #334c71;
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
@@ -154,7 +154,7 @@
     display: inline-block;
     font-weight: 400;
     color: #fff;
-    background-color: #4c78a8;
+    background-color: #334c71;
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
