--- a/frontend/src/views/MoviesView/MoviesView.css
+++ b/frontend/src/views/MoviesView/MoviesView.css
@@ -120,7 +120,7 @@
     padding: 1em 1em;
     margin: 1em;
     font-size: 1em;
-    background-color: #4c78a8;
+    background-color: #334c71;
     color: white;
     border: none;
     border-radius: 5px;
@@ -161,7 +161,7 @@
   padding: 1em 1em;
   margin: 1em;
   font-size: 1em;
-  background-color: #4c78a8;
+  background-color: #334c71;
   color: white;
   border: none;
   border-radius: 5px;
@@ -257,7 +257,7 @@
   padding: 0.6em 0.6em;
   margin: 0.6em;
   font-size: 0.6em;
-  background-color: #4c78a8;
+  background-color: #334c71;
   color: white;
   border: none;
   border-radius: 5px;
